Avancement sur l'app Electron pt2

--- a/Plant'IO - Electron App/index.html
+++ b/Plant'IO - Electron App/index.html
@@ -8,8 +8,13 @@
   </head>
   <body>
       <header>
-          <div class="option" id="close"><img src="assets/img/bar/close.png" alt=""></div>
-          <div class="option"  id="mini"><img src="assets/img/bar/minimize.png"></div>
+        <div class="bar-left">
+          <div class="option" id="text_logo"><img src="assets/img/textOnly.png"></div>
+        </div>
+            <div class="bar-right">
+              <div class="option" id="close"><img src="assets/img/bar/close.png" alt=""></div>
+              <div class="option"  id="mini"><img src="assets/img/bar/minimize.png"></div>
+            </div>
       </header>
       <main>
         <img class="logo" src="assets/img/logo.png" alt="Plant'IO logo">
