--- a/Applications/Plant'IO - Electron App - Desktop/Plant'IO-win32-x64/resources/app/index.html
+++ b/Applications/Plant'IO - Electron App - Desktop/Plant'IO-win32-x64/resources/app/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <link rel="shortcut icon" href="assets/img/logo.png">
     <link rel="stylesheet" href="assets/css/main.css">
     <title>Plant'IO - Control application</title>
@@ -17,8 +18,6 @@
             </div>
       </header>
       <main>
-        <!-- <img class="topleft" src="assets/img/TopLeft.png" alt="">
-        <img class="downright" src="assets/img/DownRight.png" alt=""> -->
         <div id="header">
             <img class="logo" src="assets/img/appLogo.png" alt="Logo de Plant'IO">
             <h1 class="title">Welcome Back</h1>
@@ -30,12 +29,21 @@
               <div class="stats">
                 <div class="soil">
                   <h2>Soil humidity :</h2>
-                  <div class="chart1" data-percent="75">75%</div>
+                  <div class="chart" data-percent="0"><div id="chart"></div></div>
                 </div>
 
                 <div class="air">
                   <h2>Air humidity :</h2>
-                  <div class="chart2" data-percent="32">32%</div>
+                  <div class="chart1" data-percent="0">
+                    <div id="chart1">
+
+                    </div>
+                  </div>
+                </div>
+
+                <div class="temp">
+                  <h2>Air Temperature :</h2>
+                  <div class="chart2" data-percent="0"><div id="chart2"></div></div>
                 </div>
               </div>
           </div>
@@ -49,6 +57,10 @@
           </div>
         </div>
       </main>
+      <div id="api-response">
+      </div>
+
+
       <!-- <input type="button" id="action-btn" value="Retrieve 10 first rows in the database" />
        <table id="table" border="1">
            <tbody>
@@ -125,8 +137,11 @@
            });
        }
    </script> -->
-    <script src="assets/js/remote.js"></script>
-    <script src="assets/js/easypiechart.js"></script>
-    <script src="assets/js/initeasychart.js"></script>
+   <script src="assets/js/remote.js"></script>
+   <script src="assets/js/easypiechart_jquery.js"></script>
+   <script src="assets/js/easypiechart.js"></script>
+   <script src="assets/js/initeasychart.js"></script>
+   <script src="assets/js/api.js"></script>
+   <script src="assets/js/adafruit.js"></script>
   </body>
 </html>
